@@ -12,7 +12,7 @@ import com.blakebr0.extendedcrafting.container.CompressorContainer;
 import com.blakebr0.extendedcrafting.init.ModRecipeTypes;
 import com.blakebr0.extendedcrafting.init.ModTileEntities;
 import net.minecraft.core.BlockPos;
-import net.minecraft.core.Direction;
+import net.minecraft.core.HolderLookup;
 import net.minecraft.core.NonNullList;
 import net.minecraft.nbt.CompoundTag;
 import net.minecraft.nbt.ListTag;
@@ -22,22 +22,18 @@ import net.minecraft.world.entity.player.Inventory;
 import net.minecraft.world.entity.player.Player;
 import net.minecraft.world.inventory.AbstractContainerMenu;
 import net.minecraft.world.item.ItemStack;
+import net.minecraft.world.item.crafting.CraftingInput;
 import net.minecraft.world.level.Level;
 import net.minecraft.world.level.block.state.BlockState;
-import net.minecraftforge.common.capabilities.Capability;
-import net.minecraftforge.common.capabilities.ForgeCapabilities;
-import net.minecraftforge.common.util.LazyOptional;
-import net.minecraftforge.energy.IEnergyStorage;
 
 import java.util.ArrayList;
 import java.util.List;
 
 public class CompressorTileEntity extends BaseInventoryTileEntity implements MenuProvider {
-	private final LazyOptional<IEnergyStorage> energyCapability = LazyOptional.of(this::getEnergy);
 	private final BaseItemStackHandler inventory;
 	private final BaseItemStackHandler recipeInventory;
 	private final BaseEnergyStorage energy;
-	private final CachedRecipe<ICompressorRecipe> recipe;
+	private final CachedRecipe<CraftingInput, ICompressorRecipe> recipe;
 	private ItemStack materialStack = ItemStack.EMPTY;
 	private List<MaterialInput> inputs = NonNullList.create();
 	private int materialCount;
@@ -59,38 +55,29 @@ public class CompressorTileEntity extends BaseInventoryTileEntity implements Men
 	}
 
 	@Override
-	public void load(CompoundTag tag) {
-		super.load(tag);
+	public void loadAdditional(CompoundTag tag, HolderLookup.Provider lookup) {
+		super.loadAdditional(tag, lookup);
 		this.materialCount = tag.getInt("MaterialCount");
-		this.materialStack = ItemStack.of(tag.getCompound("MaterialStack"));
+		this.materialStack = ItemStack.parseOptional(lookup, tag.getCompound("MaterialStack"));
 		this.progress = tag.getInt("Progress");
 		this.ejecting = tag.getBoolean("Ejecting");
-		this.energy.deserializeNBT(tag.get("Energy"));
+		this.energy.deserializeNBT(lookup, tag.get("Energy"));
 		this.inputLimit = tag.getBoolean("InputLimit");
 
-		this.inputs = loadMaterialInputs(tag);
+		this.inputs = loadMaterialInputs(lookup, tag);
 	}
 
 	@Override
-	public void saveAdditional(CompoundTag tag) {
-		super.saveAdditional(tag);
+	public void saveAdditional(CompoundTag tag, HolderLookup.Provider lookup) {
+		super.saveAdditional(tag, lookup);
 		tag.putInt("MaterialCount", this.materialCount);
-		tag.put("MaterialStack", this.materialStack.serializeNBT());
+		tag.put("MaterialStack", this.materialStack.save(lookup));
 		tag.putInt("Progress", this.progress);
 		tag.putBoolean("Ejecting", this.ejecting);
 		tag.putInt("Energy", this.energy.getEnergyStored());
 		tag.putBoolean("InputLimit", this.inputLimit);
 
-		saveMaterialInputs(tag, this.inputs);
-	}
-
-	@Override
-	public <T> LazyOptional<T> getCapability(Capability<T> cap, Direction side) {
-		if (!this.isRemoved() && cap == ForgeCapabilities.ENERGY) {
-			return ForgeCapabilities.ENERGY.orEmpty(cap, this.energyCapability);
-		}
-
-		return super.getCapability(cap, side);
+		saveMaterialInputs(lookup, tag, this.inputs);
 	}
 
 	@Override
@@ -114,7 +101,7 @@ public class CompressorTileEntity extends BaseInventoryTileEntity implements Men
 				tile.setChangedFast();
 			}
 
-			if (!tile.inputLimit || (recipe != null && tile.materialCount < recipe.getInputCount())) {
+			if (!tile.inputLimit || (recipe != null && tile.materialCount < recipe.getCount(0))) {
 				var index = tile.canInsertItem(input);
 				if (index > -1) {
 					tile.insertItem(index, input);
@@ -124,16 +111,16 @@ public class CompressorTileEntity extends BaseInventoryTileEntity implements Men
 		}
 
 		if (recipe != null && tile.getEnergy().getEnergyStored() > 0) {
-			if (tile.materialCount >= recipe.getInputCount()) {
+			if (tile.materialCount >= recipe.getCount(0)) {
 				if (tile.progress >= recipe.getPowerCost()) {
-					var result = recipe.assemble(tile.recipeInventory.asRecipeWrapper(), level.registryAccess());
+					var result = recipe.assemble(tile.recipeInventory.toCraftingInput(3, 3), level.registryAccess());
 
 					if (StackHelper.canCombineStacks(result, output)) {
 						tile.updateResult(result);
 						tile.progress = 0;
-						tile.materialCount -= recipe.getInputCount();
+						tile.materialCount -= recipe.getCount(0);
 
-						tile.consumeInputs(recipe.getInputCount());
+						tile.consumeInputs(recipe.getCount(0));
 
 						if (tile.materialCount <= 0) {
 							tile.materialStack = ItemStack.EMPTY;
@@ -164,7 +151,7 @@ public class CompressorTileEntity extends BaseInventoryTileEntity implements Men
 					newestInput.count -= addCount;
 
 					if (newestInput.count <= 0) {
-						tile.inputs.remove(tile.inputs.size() - 1);
+						tile.inputs.removeLast();
 					}
 
 					if (tile.materialCount < 1) {
@@ -259,7 +246,7 @@ public class CompressorTileEntity extends BaseInventoryTileEntity implements Men
 
 	public int getMaterialsRequired() {
 		if (this.hasRecipe())
-			return this.recipe.get().getInputCount();
+			return this.recipe.get().getCount(0);
 
 		return 0;
 	}
@@ -301,7 +288,7 @@ public class CompressorTileEntity extends BaseInventoryTileEntity implements Men
 
 		// if there's a valid recipe, we can start allowing item variants
 		if (size < 100 && this.recipe.exists()) {
-			var recipeStack = this.recipe.get().getIngredients().get(0);
+			var recipeStack = this.recipe.get().getIngredients().getFirst();
 			if (recipeStack.test(stack))
 				return size;
 		}
@@ -312,7 +299,7 @@ public class CompressorTileEntity extends BaseInventoryTileEntity implements Men
 	private void insertItem(int index, ItemStack stack) {
 		int consumeAmount = stack.getCount();
 		if (this.inputLimit) {
-			consumeAmount = Math.min(consumeAmount, this.recipe.get().getInputCount() - this.materialCount);
+			consumeAmount = Math.min(consumeAmount, this.recipe.get().getCount(0) - this.materialCount);
 		}
 
 		if (this.inputs.isEmpty() || this.inputs.size() == index) {
@@ -333,7 +320,7 @@ public class CompressorTileEntity extends BaseInventoryTileEntity implements Men
 	}
 
 	private MaterialInput getNewestInput() {
-		return this.inputs.get(this.inputs.size() - 1);
+		return this.inputs.getLast();
 	}
 
 	private void consumeInputs(int amount) {
@@ -349,18 +336,18 @@ public class CompressorTileEntity extends BaseInventoryTileEntity implements Men
 		}
 	}
 
-	private static List<MaterialInput> loadMaterialInputs(CompoundTag tag) {
+	private static List<MaterialInput> loadMaterialInputs(HolderLookup.Provider lookup, CompoundTag tag) {
 		var list = tag.getList("Inputs", 10);
 		var inputs = new ArrayList<MaterialInput>();
 
 		for (int i = 0; i < list.size(); i++) {
-			inputs.add(MaterialInput.load(list.getCompound(i)));
+			inputs.add(MaterialInput.load(lookup, list.getCompound(i)));
 		}
 
 		// backwards compatibility
 		// if there is a material stack set but no inputs then we add it as an input
 		if (tag.contains("MaterialStack") && inputs.isEmpty()) {
-			var stack = ItemStack.of(tag.getCompound("MaterialStack"));
+			var stack = ItemStack.parseOptional(lookup, tag.getCompound("MaterialStack"));
 			var count = tag.getInt("MaterialCount");
 
 			if (count > 0) {
@@ -371,10 +358,10 @@ public class CompressorTileEntity extends BaseInventoryTileEntity implements Men
 		return inputs;
 	}
 
-	private static void saveMaterialInputs(CompoundTag tag, List<MaterialInput> inputs) {
+	private static void saveMaterialInputs(HolderLookup.Provider lookup, CompoundTag tag, List<MaterialInput> inputs) {
 		var list = new ListTag();
 		for (var input : inputs) {
-			list.add(input.save());
+			list.add(input.save(lookup));
 		}
 
 		tag.put("Inputs", list);
@@ -393,17 +380,17 @@ public class CompressorTileEntity extends BaseInventoryTileEntity implements Men
 			return Component.literal(this.count + "x ").append(this.stack.getHoverName());
 		}
 
-		public CompoundTag save() {
+		public CompoundTag save(HolderLookup.Provider lookup) {
 			var tag = new CompoundTag();
 
-			tag.put("Item", stack.save(new CompoundTag()));
+			tag.put("Item", stack.save(lookup));
 			tag.putInt("Count", count);
 
 			return tag;
 		}
 
-		public static MaterialInput load(CompoundTag tag) {
-			var stack = ItemStack.of(tag.getCompound("Item"));
+		public static MaterialInput load(HolderLookup.Provider lookup, CompoundTag tag) {
+			var stack = ItemStack.parseOptional(lookup, tag.getCompound("Item"));
 			var count = tag.getInt("Count");
 
 			return new MaterialInput(stack, count);
